[package]
name = "Elevator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }
socket2 = "0.5"
crossbeam-channel = "0.5"